--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 
 }
