--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="android.example.shoestoreinventoryapp">
+    package="android.example.beerstoreinventoryapp">
 
     <application
-        android:name=".ShoeApplication"
+        android:name="android.example.beerstoreinventoryapp.BeerApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="android.example.beerstoreinventoryapp.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
