--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.jakewharton.timber:timber:4.7.1'
+    implementation 'androidx.core:core-ktx:1.0.2'
+    implementation "androidx.core:core-ktx:1.3.1"
+    implementation "androidx.fragment:fragment-ktx:1.2.5"
 
 }
